Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-13138

Never smallify existing StringValue objects, only new ones during DeepCopy

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 4.4.0
    • Impala 4.5.0, Impala 4.4.1
    • None
    • None

    Description

      Currently we have the following problematic line:

      https://github.com/apache/impala/blob/880690c7bd46e6af058d8a669bea41af4a131049/be/src/runtime/buffered-tuple-stream.cc#L968

      It modifies the string value of an existing tuple and it can corrupt the BufferedTupleStream.

      We should only smallify string values during deepcopy, and only the target string value, never the source.

      Attachments

        Issue Links

          Activity

            People

              boroknagyz Zoltán Borók-Nagy
              boroknagyz Zoltán Borók-Nagy
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: